# 05_Audiobook_Generation

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md  tn_quality_evaluation.md
models/: README.md
notebooks/: Audiobook_AI_Colab_Training_H100_AUTOPILOT.ipynb  COLAB_GUIDE.md
sample_data/: sample_article.md  sample_book.txt
scripts/: quickstart.sh  train_colab.sh
src/audiobook_ai/: __init__.py  cli.py  config.py  logging_utils.py
src/audiobook_ai/agent/: __init__.py  llm_orchestrator.py  narrator_agent.py  policy.py  state.py  tools.py
src/audiobook_ai/analysis/: __init__.py  audio_quality.py  error_analysis.py  latency.py
src/audiobook_ai/api/: app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/audiobook_ai/automation/: autopilot.py
src/audiobook_ai/autoreport/: artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/audiobook_ai/data/: __init__.py  dataset.py  document.py  download_dataset.py  samples.py  tn_corpus.py
src/audiobook_ai/grading/: checklist.py
src/audiobook_ai/models/: __init__.py  baseline_rules.py  expanders.py  model_registry.py  normalizer.py
src/audiobook_ai/monitoring/: drift_report.py
src/audiobook_ai/synthesis/: __init__.py  stitch.py  subtitles.py  tts_backend.py  voices.py
src/audiobook_ai/training/: __init__.py  evaluate.py  train_normalizer.py  tune.py
tests/: conftest.py  test_agent_pipeline.py  test_analysis_grade.py  test_corpus_and_eval.py  test_document.py  test_expanders_baseline.py
